test_case/rust-lang_rust/84721_829747582.rs
rust
> use crate as playground;
> 
> mod inner {
>     //! [playground::inner::f] //~ ERROR no item named `playground` in scope
>     pub fn f() {}
> }
> 